# penpal-cli

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
penpal/: auth.py  builder.py  cli.py  client.py  config.py  cost.py  db.py  extractor.py  models.py  skills.py
penpal/tui/: app.py  dashboard.py  detail.py  styles.tcss
tests/: test_builder.py  test_cost.py  test_db.py  test_extractor.py
