[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "penpal-cli"
version = "0.1.0"
description = "Async Claude CLI via Batch API — half the cost, none of the rush."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.89.0",
    "click>=8.3.0",
    "keyring>=25.0.0",
    "textual>=8.2.0",
    "rich>=14.3.0",
]

[project.scripts]
penpal = "penpal.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["penpal*"]
